# the_spaceship_rental_problem

./: LICENSE  README.MD  pyproject.toml
src/the_spaceship_rental_problem/: __main__.py  models.py  optimisation_algorithm.py  webserver.py
tests/: test_algo.py  test_main.py
