[project]
name = "the_spaceship_rental_problem"
version = "1.0.0"
authors = [
  { name="Nicolas Muller", email="nicolas0muller@gmail.com" },
]
description = "A solution to the spaceship rental problem"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "fastapi",
  "pydantic",
  "uvicorn",
  "pytest",
  "httpx",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = [
  "."
]